Fixed Specifications So deserializing worked on endpoints
