# swagger_server/models/__init__.py
@@ -3,5 +3,10 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from swagger_server.models.data import Data
+from swagger_server.models.data_data import DataData
+from swagger_server.models.data_row import DataRow
+from swagger_server.models.data_row_fields import DataRowFields
+from swagger_server.models.data_schema import DataSchema
 from swagger_server.models.error import Error
 from swagger_server.models.success import Success
